# catalog-ops-automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
artifacts/evidence/: run-fa2b4f0a.json  run-fa2b4f0a.md
catalog_app/: __init__.py  config.py  copywriter.py  database.py  main.py  models.py  schemas.py  service.py  validation.py  worker.py
data/: sample-products.csv
dify-workflows/: catalog-copy-v1-candidate.yml
docker/postgres-init/: 01-create-databases.sh
docs/adr/: 001-split-shadowbot-monolith.md
migrations/: env.py
migrations/versions/: 904a80d53212_initial_schema.py
portfolio/: .gitignore  index.html
shadowbot/: IMPORT-RUN-GUIDE.md  catalog_odoo_rpa.py  flow-parameters.example.json  odoo_adapter.py  product_builder.py
tests/: conftest.py  test_api.py  test_api_full.py  test_copywriter.py  test_copywriter_full.py  test_odoo_adapter.py  test_portfolio.py  test_quality_edges.py  test_rpa_main.py  test_sample.py  test_service.py  test_shadowbot_module.py  test_validation.py  test_worker.py
tools/: configure_metabase_reader.sql  generate_sample_catalog.py  run_catalog_demo.py
